# Rl-Inventory-Api

./: README.md  inventory.py  item.py  setup.cfg  setup.py  test.py
src/bakkes_mod_inventory/: __init__.py  main.py
src/rl_inventory_api/: __init__.py  inventory.py  item.py  productseries.py
src/rl_inventory_api/constants/: certifies.py  colors.py  rarities.py  series.py  tradeable.py  types.py
