[metadata]
name = bakkes_mod_inventory
version = 0.0.3
author = gustavopedrosob
author_email = thevicio27@gmail.com
description = Easy way to interact with your Bakkesmod inventory.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gustavopedrosob/bakkes_mod_inventory
project_urls =
    Bug Tracker = https://github.com/gustavopedrosob/bakkes_mod_inventory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = ["git+https://github.com/gustavopedrosob/rocket_league_utils"]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src